# manimce

./: README.md  pyproject.toml
manim/: __init__.py
